Signed-off-by: Buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/pharmacy/pharmacy_purchase_order_list_for_recieve.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_purchase_order_list_for_recieve.xhtml
@@ -62,6 +62,10 @@
                         </h:outputLabel>
                     </h:panelGroup>                   
                 </p:column> 
+                <p:column headerText="Ordered Department" >
+                    <h:outputLabel value="#{p.fromDepartment.name}" >                                      
+                    </h:outputLabel>
+                </p:column>
 
                 <p:column headerText="Approve by" >
                     <h:commandLink action="pharmacy_reprint_po" >
@@ -69,6 +73,7 @@
                         </h:outputLabel>
                         <f:setPropertyActionListener value="#{p}" target="#{pharmacyBillSearch.bill}"/>
                     </h:commandLink>
+
                     <br/>
                     <h:panelGroup rendered="#{p.cancelled}" >
                         <h:outputLabel style="color: red;" value="Cancelled by " />
