resolve cancel issue in opd bill

--- a/src/main/webapp/bill_cancel.xhtml
+++ b/src/main/webapp/bill_cancel.xhtml
@@ -89,7 +89,7 @@
                                         </p:commandButton>
                                     </div>
 
-                                    <bi:opdBillPrintRuhunu bill="#{billSearch.bill}" cancell="true"/>
+                                    <bi:opdBillPrintRmh bill="#{billSearch.bill}" cancell="true"/>
 
 
                                 </h:panelGroup>
