--- a/src/main/webapp/bill_refund.xhtml
+++ b/src/main/webapp/bill_refund.xhtml
@@ -123,7 +123,7 @@
                                         </p:commandButton>
                                     </div>
                                     <ui:repeat value="#{billSearch.bill}" var="b">
-                                        <bi:opdBillPrintRuhunu bill="#{b}" dup="false"/>
+                                        <bi:opdBillPrintRmh bill="#{b}" dup="false"/>
                                     </ui:repeat>
 
                                 </h:panelGroup>
