--- a/src/main/webapp/channel/channel_report_all_booking_special.xhtml
+++ b/src/main/webapp/channel/channel_report_all_booking_special.xhtml
@@ -15,7 +15,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="Channel Bill List">
-                    <h:panelGrid columns="2" styleClass="noPrintButton"> 
+                    <p:panelGrid columns="2" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{channelReportController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
 
@@ -33,33 +33,33 @@
                         <p:selectBooleanCheckbox value="#{channelReportController.paid}" />
                         <h:outputLabel value="Summery"/>
                         <p:selectBooleanCheckbox value="#{channelReportController.summery}" />
-                    </h:panelGrid>
-                    <h:panelGrid columns="4" > 
-                        <p:commandButton ajax="false" id="btnRefresh2" value="Process" action="#{channelReportController.channelBillList}">
+                    </p:panelGrid>
+                    <h:panelGrid columns="3" class="my-2" > 
+                        <p:commandButton style="margin-right: 10px" ajax="false" id="btnRefresh2" value="Process" action="#{channelReportController.channelBillList}">
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right; margin-right: 10px" >
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right; margin-right: 10px" >
                             <p:dataExporter type="xlsx" target="tbl,tbl2,tbl3" fileName="Channel_Appointment_list"  />
                         </p:commandButton>
                     </h:panelGrid>
 
                 </p:panel>
-                <p:panel id="billFeeReport" styleClass="noBorder summeryBorder" header="Channel Bill List">
+                <p:panel id="billFeeReport"  header="Channel Bill List">
 
 
                     <p:panel id="reportPrint">
                         <p:dataTable value="#{channelReportController.channelBills}" var="b" id="tbl" >
                             <f:facet name="header" >
                                 <p:outputLabel value="Bill Summary" />
-                                <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-5" value="From : " style=" white-space:pre-line;"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>                          
                                 <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                                 <p:outputLabel value="#{channelReportController.reportKeyWord.staff.person.name}" style=" white-space:pre-line;"/>
                             </f:facet>
@@ -68,7 +68,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" >
@@ -76,7 +76,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
@@ -160,20 +160,17 @@
                                 <p:outputLabel value="Cancelled" rendered="#{b.cancelled==true}"/>
                                 <p:outputLabel value="Refunded" rendered="#{b.refunded==true}"/>                        
                             </p:column>  
-                            <f:facet name="footer" >
-                                <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
-                            </f:facet>
                         </p:dataTable>
                         <p:dataTable value="#{channelReportController.channelBillsCancelled}" var="b" id="tbl2" rendered="#{!channelReportController.summery}">
                             <f:facet name="header" >
                                 <p:outputLabel value="Bill Summary(Cancel)" />
-                                <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-5" value="From : " style=" white-space:pre-line;"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>                          
                                 <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </f:facet>
                             <p:column style="text-align: left;" rendered="#{webUserController.hasPrivilege('Developers')}" >
@@ -181,7 +178,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" >
@@ -189,7 +186,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
@@ -265,21 +262,18 @@
                             <p:column headerText="C/R" >
                                 <p:outputLabel value="Cancelled" rendered="#{b.cancelled==true}"/>
                                 <p:outputLabel value="Refunded" rendered="#{b.refunded==true}"/>                        
-                            </p:column>  
-                            <f:facet name="footer" >
-                                <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
-                            </f:facet>
+                            </p:column>
                         </p:dataTable>
                         <p:dataTable value="#{channelReportController.channelBillsRefunded}" var="b" id="tbl3" rendered="#{!channelReportController.summery}">
                             <f:facet name="header" >
                                 <p:outputLabel value="Bill Summary(Refund)" />
-                                <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-5" value="From : " style=" white-space:pre-line;"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm;ss"/>
                                 </h:outputLabel>                          
                                 <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </f:facet>
                             <p:column style="text-align: left;" rendered="#{webUserController.hasPrivilege('Developers')}" >
@@ -287,7 +281,7 @@
                                     <p:outputLabel value="Appoinment Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MM yyyy" ></f:convertDateTime>
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="dd MMM yyyy" ></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column style="text-align: left;" >
@@ -295,7 +289,7 @@
                                     <p:outputLabel value="Crteated Date" />
                                 </f:facet>
                                 <p:outputLabel value="#{b.createdAt}" >
-                                    <f:convertDateTime pattern="dd MM yyyy hh:mm:ss a"></f:convertDateTime>
+                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm:ss"></f:convertDateTime>
                                 </p:outputLabel>
                             </p:column>
                             <p:column>
@@ -371,10 +365,7 @@
                             <p:column headerText="C/R" >
                                 <p:outputLabel value="Cancelled" rendered="#{b.cancelled==true}"/>
                                 <p:outputLabel value="Refunded" rendered="#{b.refunded==true}"/>                        
-                            </p:column>  
-                            <f:facet name="footer" >
-                                <h:outputLabel value="#{sessionController.loggedUser.webUserPerson.name}" style="float: right"/>
-                            </f:facet>
+                            </p:column>
                         </p:dataTable>
                     </p:panel>
                 </p:panel>
