--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -32,7 +32,15 @@
 
                                     <div class="mb-3">
                                         <h:outputLabel value="Phone Number" class="form-label" />
-                                        <p:inputText class="form-control" value="#{patientController.searchPhone}" />
+                                        <p:inputText id="txtNewPtPhone" 
+                                                     class="form-control"
+                                                     autocomplete="off" 
+                                                     value="#{patientController.searchPhone}"
+                                                     validatorMessage="Please enter a valid phone number (numbers only)"
+                                                     >
+                                            <f:validateRegex pattern="^[0-9]*$"/>
+                                        </p:inputText>
+
                                     </div>
 
                                     <div class="mb-3">
@@ -108,7 +116,7 @@
                                             <div class="row g-2">
                                                 <!-- Your p:commandButton elements here wrapped in col divs -->
                                                 <div class="col-auto m-2 ">
-                                                    
+
                                                     <p:commandButton value="Profile" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-1 mb-2">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
@@ -122,8 +130,8 @@
                                                                      styleClass="mx-1 mb-2">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
-                                                     <p:commandButton value="Admit" 
-                                                                      action="#{patientController.navigateToAdmitFromPatientProfile()}" 
+                                                    <p:commandButton value="Admit" 
+                                                                     action="#{patientController.navigateToAdmitFromPatientProfile()}" 
                                                                      ajax="false" 
                                                                      styleClass="mx-1 mb-2">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
@@ -146,7 +154,7 @@
                                                                      styleClass="mx-1 mb-2">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
-                                                    
+
                                                     <p:commandButton value="Billing for Cashier"
                                                                      action="#{patientController.navigateToBillingForCashierFromPatientProfile()}"
                                                                      ajax="false"
