--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
@@ -10,17 +10,24 @@
     <ui:define name="subcontent">
         <h:form>
             <p:panel id="panelPrint" styleClass="noBorder summeryBorder" header="Sale Summary By Payment Method(By Bill)">
-                <h:panelGrid columns="2" styleClass="noPrintButton">
-                    <h:outputLabel value="From Date"/>
-                    <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a"  >
-                    </p:calendar>
-                    <h:outputLabel value="To Date"/>
-                    <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" >
-                    </p:calendar>
-                    <h:outputLabel value="Department"/>
-                    <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.department}"  style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
-                    </p:autoComplete>
-                </h:panelGrid>
+                <div class="row">
+                    <div class="col-md-4">
+                        <h:outputLabel value="From Date"/>
+                        <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" class="w-100 p-2" >
+                        </p:calendar>
+                    </div>
+                    <div class="col-md-4">
+                        <h:outputLabel value="To Date"/>
+                        <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="dd MMMM yyyy hh:mm:ss a" class="w-100 p-2" >
+                        </p:calendar>
+                    </div>
+                    <div class="col-md-4">
+                        <h:outputLabel value="Department"/>
+                        <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.department}"  style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                        </p:autoComplete>
+                    </div>
+                </div>
+
 
                 <h:panelGrid columns="3">
                     <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createSalePaymentMethodByBill()}"/>
@@ -32,19 +39,19 @@
                     </p:commandButton>
                 </h:panelGrid>
 
-                <h:panelGrid styleClass="printBlock" columns="2">
-                    <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
-                    <h:outputLabel value=" DEPARTMENT SALE REPORT SUMMERY"/>                   
-                    <h:outputLabel value="From Date :  "/>
-                    <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
-                        <f:convertDateTime pattern="dd MMMM yyyy" />
-                    </h:outputLabel>
-                    <h:outputLabel value="To Date"/>
-                    <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
-                        <f:convertDateTime pattern="dd MMMM yyyy" />
-                    </h:outputLabel>                       
-                </h:panelGrid>
-
+                <!--                <h:panelGrid styleClass="printBlock" columns="2">
+                                    <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
+                                    <h:outputLabel value=" DEPARTMENT SALE REPORT SUMMERY"/>                   
+                                    <h:outputLabel value="From Date :  "/>
+                                    <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
+                                        <f:convertDateTime pattern="dd MMMM yyyy" />
+                                    </h:outputLabel>
+                                    <h:outputLabel value="To Date"/>
+                                    <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
+                                        <f:convertDateTime pattern="dd MMMM yyyy" />
+                                    </h:outputLabel>                       
+                                </h:panelGrid>-->
+                <p:spacer height="15"/>
                 <p:dataTable id="sum1" value="#{pharmacySaleReport.billedPaymentSummery.bills}" var="i">
                     <f:facet name="header">  
                         <h:outputLabel value="Report Pharmacy Sale By Date Summary Payment Method"/>
