--- a/src/main/webapp/channel/channel_report_by_consultant.xhtml
+++ b/src/main/webapp/channel/channel_report_by_consultant.xhtml
@@ -14,40 +14,40 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 <p:panel  header="Channel Bill List">
-                    <h:panelGrid columns="2" styleClass="noPrintButton"> 
+                    <p:panelGrid columns="2" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
                         <p:calendar id="frmDate" value="#{channelReportController.fromDate}" navigator="true"  pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
                         <h:outputLabel value="To Date"/>
                         <p:calendar id="toDate" value="#{channelReportController.toDate}" navigator="true" pattern="dd MMMM yyyy HH:mm:ss" ></p:calendar>
-                    </h:panelGrid>
-                    <h:panelGrid columns="4"> 
-                        <p:commandButton ajax="false" id="btnRefresh" value="Process Created Date" action="#{channelReportController.createConsultantCountTableByCreatedDate}">
+                    </p:panelGrid>
+                    <h:panelGrid columns="4" class="my-2"> 
+                        <p:commandButton style="margin-right: 10px" ajax="false" id="btnRefresh" value="Process Created Date" action="#{channelReportController.createConsultantCountTableByCreatedDate}">
                         </p:commandButton>
-                        <p:commandButton ajax="false" id="btnRefresh2" value="Process Session Date" action="#{channelReportController.createConsultantCountTableBySessionDate}">
+                        <p:commandButton style="margin-right: 10px" ajax="false" id="btnRefresh2" value="Process Session Date" action="#{channelReportController.createConsultantCountTableBySessionDate}">
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="float: right; margin-right: 10px" >
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
-                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right; margin-right: 10px" >
                             <p:dataExporter type="xlsx" target="tbl" fileName="hr_bill_list"  />
                         </p:commandButton>
                     </h:panelGrid>
 
                 </p:panel>
-                <p:panel id="billFeeReport" styleClass="noBorder summeryBorder" header="Channel Bill List">
+                <p:panel id="billFeeReport"  header="Channel Bill List">
 
 
                     <p:panel id="reportPrint">
                         <p:dataTable value="#{channelReportController.bookingCountSummryRows}" var="b" id="tbl" >
                             <f:facet name="header" >
                                 <p:outputLabel value="Bill Summary" />
-                                <h:outputLabel value="From : " style=" white-space:pre-line;"/>
-                                <h:outputLabel  value="#{channelReportController.fromDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-5" value="From : " style=" white-space:pre-line;"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.fromDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>                          
                                 <h:outputLabel value="&emsp;&emsp;To :"/>
-                                <h:outputLabel  value="#{channelReportController.toDate}" >
-                                    <f:convertDateTime pattern="dd MMM yyyy HH:mm a"/>
+                                <h:outputLabel class="ml-2" value="#{channelReportController.toDate}" >
+                                    <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss"/>
                                 </h:outputLabel>
                             </f:facet>
 
