--- a/src/main/webapp/inward/inward_admission_type.xhtml
+++ b/src/main/webapp/inward/inward_admission_type.xhtml
@@ -23,13 +23,13 @@
                         <div class="col-4">
                             <p:panel>
                                 <h:panelGrid id="gpSelectButtons" columns="2" class="my-2"  >
-                                    <h:commandButton id="btnAdd" value="Add" action="#{admissionTypeController.prepareAdd()}" class="btn btn-primary" >
+                                    <p:commandButton id="btnAdd" value="Add" action="#{admissionTypeController.prepareAdd()}"  >
                                         <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
                                         </f:ajax>
-                                    </h:commandButton>
-                                    <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{admissionTypeController.delete()}"  value="Delete" class="btn btn-primary"  >
-                                    </h:commandButton>
+                                    </p:commandButton>
+                                    <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" action="#{admissionTypeController.delete()}"  value="Delete"  >
+                                    </p:commandButton>
                                 </h:panelGrid>
                                 <div class="container">
                                     <div class="row">
@@ -81,9 +81,9 @@
 
                                     </div>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <h:commandButton id="btnSave" value="Save" action="#{admissionTypeController.saveSelected()}" class="btn btn-primary">
+                                        <p:commandButton id="btnSave" value="Save" action="#{admissionTypeController.saveSelected()}" >
                                             <f:ajax render="btnAdd btnDelete btnSave lstSelect gpDetail selectFocus" execute="gpDetail"></f:ajax>
-                                        </h:commandButton>
+                                        </p:commandButton>
                                         <p:defaultCommand target="btnSave" />
                                     </h:panelGrid>
                                 </h:panelGrid>
