--- a/src/main/webapp/inward/inward_room_category.xhtml
+++ b/src/main/webapp/inward/inward_room_category.xhtml
@@ -24,7 +24,17 @@
                     <div class="row">
                         <div class="col-6">
                             <h:panelGrid id="gpSelect" columns="1" class="w-100" >
+
                                 <p:panel>
+                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
+                                        <p:commandButton id="btnAdd" value="Add" action="#{roomCategoryController.prepareAdd()}" >
+                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
+                                            </f:ajax>
+                                        </p:commandButton>
+                                        <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" action="#{roomCategoryController.delete()}"  value="Delete"  >
+                                        </p:commandButton>
+                                    </h:panelGrid>
                                     <h:panelGrid id="gpSelectText" class="w-100 overflow-auto" >
                                         <p:selectOneListbox  id="lstSelect"  value="#{roomCategoryController.current}" class="w-100 overflow-auto">
                                             <f:selectItems  value="#{roomCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
@@ -32,15 +42,7 @@
                                             </f:ajax>
                                         </p:selectOneListbox>
                                     </h:panelGrid>
-                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                        <h:commandButton id="btnAdd" class="btn btn-primary" value="Add" action="#{roomCategoryController.prepareAdd()}" >
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
-                                            </f:ajax>
-                                        </h:commandButton>
-                                        <h:commandButton id="btnDelete" class="btn btn-primary" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" action="#{roomCategoryController.delete()}"  value="Delete"  >
-                                        </h:commandButton>
-                                    </h:panelGrid>
+
                                 </p:panel>
                             </h:panelGrid  >
                         </div>
@@ -52,10 +54,10 @@
                                         <p:inputText class="mx-2 w-100" autocomplete="off" id="txtName" value="#{roomCategoryController.current.name}"  ></p:inputText>
                                     </h:panelGrid>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <h:commandButton  id="btnSave" value="Save" action="#{roomCategoryController.saveSelected()}" class="btn btn-primary mt-1">
+                                        <p:commandButton  id="btnSave" value="Save" action="#{roomCategoryController.saveSelected()}" class="mt-1">
                                             <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
                                             </f:ajax>
-                                        </h:commandButton>
+                                        </p:commandButton>
                                         <p:defaultCommand target="btnSave"/>
                                     </h:panelGrid>
                                 </h:panelGrid>
