Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/channel/channel_report_by_counts_for_doctors_daily.xhtml
+++ b/src/main/webapp/channel/channel_report_by_counts_for_doctors_daily.xhtml
@@ -14,7 +14,7 @@
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
                 
-                <p:panel  header="Doctor COunts on a daily basis">
+                <p:panel  header="Doctor Counts on a daily basis">
                     
                     <p:panelGrid columns="2" styleClass="noPrintButton"> 
                         <h:outputLabel value="From Date"/>
