improve manage time base services

--- a/src/main/webapp/inward/inward_timed_item_theatre_only.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_theatre_only.xhtml
@@ -6,7 +6,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
 
-    <ui:define name="subcontent">
+    <ui:define name="content">
         <h:panelGroup >
             <h:form id="form"  >
                 <p:growl id="msg"  />
